# wikigender

./: .gitignore  README.md  pyproject.toml  wikigender.py
