[tool.poetry]
name = "wikigender"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
SPARQLWrapper = "^2.0.0"
tqdm = "^4.64.1"
pandas = "^1.5.1"
typer = "^0.7.0"
pandera = "^0.13.4"
loguru = "^0.6.0"
ipython = "^8.6.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
